--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <img class="sidebar-retro-img" src="assets/images/image-gaming-growth.jpg">
             <div class="sidebar-blog-content-article">
                 <div class="sidebar-blog-content-text">03</div>
-                <div class="sidebar-blog-content-subtitle-m">Top 10 Game Console of 2022</div>
+                <div class="sidebar-blog-content-subtitle-m">Top 10 Game Console</div>
                 <div class="sidebar-blog-content-subtitle-s">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</div>
             </div>
         </article>
